fix spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,7 +91,7 @@ h3{
     -webkit-transform: rotate(-45deg); /* Safari */
     transform: rotate(-45deg);
     width: 2px;
-    height: 200px;
+    height: 210px;
     margin-left: 55px;
     margin-top: -45px;
     position: absolute;
@@ -102,8 +102,8 @@ h3{
     -webkit-transform: rotate(45deg); /* Safari */
     transform: rotate(45deg);
     width: 2px;
-    height: 200px;
-    margin-left: 55px;
+    height: 210px;
+    margin-left: 50px;
     margin-top: -55px;
     position: absolute;
 }
@@ -113,8 +113,8 @@ h3{
     -webkit-transform: rotate(45deg); /* Safari */
     transform: rotate(45deg);
     width: 1px;
-    height: 200px;
-    margin-left: 45px;
+    height: 210px;
+    margin-left: 40px;
     margin-top: -55px;
     position: absolute;
 }
@@ -124,8 +124,8 @@ h3{
     -webkit-transform: rotate(45deg); /* Safari */
     transform: rotate(45deg);
     width: 1px;
-    height: 200px;
-    margin-left: 65px;
+    height: 210px;
+    margin-left: 60px;
     margin-top: -55px;
     position: absolute;
 }
